--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -71,7 +71,7 @@ defaults:
       type: "pages"
     values:
       layout: "page"
-      comments: true
+      comments: false
       # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
       search: true
       sidebar: home_sidebar
@@ -101,10 +101,6 @@ defaults:
 
 sidebars:
 - home_sidebar
-- mydoc_sidebar
-- product1_sidebar
-- product2_sidebar
-- other
 
 description: "Repository intended to document all THEMIS conventions for how to map different types of observational health data to the OMOP CDM."
 # the description is used in the feed.xml file
