How to populate care_site.place_of_service_concept_id
Closes THEMIS #99

--- a/docs/_data/tags.yml
+++ b/docs/_data/tags.yml
@@ -5,5 +5,8 @@ allowed-tags:
   - themis
   - drug_exposure
   - dates
+  - care_site
+  - place_of_service
+  - visit_concept_id
 
 # Copyright 2021 Google LLC
