--- a/docs/_data/tags.yml
+++ b/docs/_data/tags.yml
@@ -5,5 +5,8 @@ allowed-tags:
   - themis
   - drug_exposure
   - dates
-
+  - person
+  - gender
+  - gender_identity
+  - sex
 # Copyright 2021 Google LLC
