--- a/docs/_data/tags.yml
+++ b/docs/_data/tags.yml
@@ -10,4 +10,7 @@ allowed-tags:
   - gender_identity
   - sex
   - gender_concept_id
+  - location
+  - location_id
+  - address
 # Copyright 2021 Google LLC
