--- a/docs/_data/sidebars/mydoc_sidebar.yml
+++ b/docs/_data/sidebars/mydoc_sidebar.yml
@@ -26,6 +26,10 @@ entries:
       url: /gender_identity.html
       output: web, pdf
 
+    - title: Providers with Mulitple Addresses
+      url: /multiple_provider_addresses.html
+      output: web, pdf
+
   - title: CDM Tables
     output: web, pdf
     folderitems:
