--- a/docs/_data/tags.yml
+++ b/docs/_data/tags.yml
@@ -5,6 +5,8 @@ allowed-tags:
   - themis
   - drug_exposure
   - dates
+  - care_site
+  - place_of_service
   - person
   - gender
   - gender_identity
