measurement value_as_number negative
closes #120

--- a/docs/_data/sidebars/mydoc_sidebar.yml
+++ b/docs/_data/sidebars/mydoc_sidebar.yml
@@ -98,9 +98,9 @@ entries:
     #   url: /location.html
     #   output: web, pdf
 
-    # - title: Measurement
-    #   url: /measurement.html
-    #   output: web, pdf
+    - title: Measurement
+      url: /measurement.html
+      output: web, pdf
 
     # - title: Metadata
     #   url: /metadata.html
