zip code in cdm
closes #130

--- a/docs/_data/sidebars/mydoc_sidebar.yml
+++ b/docs/_data/sidebars/mydoc_sidebar.yml
@@ -94,9 +94,9 @@ entries:
     #   url: /fact_relationship.html
     #   output: web, pdf
 
-    # - title: Location
-    #   url: /location.html
-    #   output: web, pdf
+    - title: Location
+      url: /location.html
+      output: web, pdf
 
     - title: Measurement
       url: /measurement.html
