--- a/docs/_data/tags.yml
+++ b/docs/_data/tags.yml
@@ -32,4 +32,6 @@ allowed-tags:
   - datetime
   - visit_occurrence
   - drug_administration
+  - pro
+  - patient_reported
 # Copyright 2021 Google LLC
