closes https://github.com/OHDSI/CommonDataModel/issues/629

--- a/docs/_data/sidebars/mydoc_sidebar.yml
+++ b/docs/_data/sidebars/mydoc_sidebar.yml
@@ -22,6 +22,10 @@ entries:
     output: web, pdf
     folderitems:
 
+    - title: Person Exclusion
+      url: /excluded_persons.md
+      output: web, pdf
+
     - title: Gender Identity
       url: /gender_identity.html
       output: web, pdf
